Green: DealNextCard_ShouldPass()